K8s/Test_Nginx_App/testNginxApp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testnginxapp
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: FrontEnd
  template:
    metadata:
      name:  nginxpod
      labels:
        tier: FrontEnd
    spec:
      containers:
      - name: mynginxcontainer
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
