K8s/Test_Nginx_App/testNginxApp_ClusterService.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnginxappservice
spec:
  selector:
    tier: FrontEnd
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
