K8s/Test_Nginx_App/testNginxApp_IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnginxappingressrule
spec:
  rules:
  - host: ae4f5c393ff4541939708bf4504c10bc-b2d2c6aea9901b78.elb.us-east-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testnginxappservice
            port:
              number: 80

  ingressClassName: nginx
